@@ -1,5 +1,7 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
+S3method(as.data.frame,BenchmarkResult)
+S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
 S3method(capLargeValues,Task)
@@ -120,6 +122,7 @@ S3method(makeRLearner,surv.glmboost)
 S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
+S3method(makeRLearner,surv.rpart)
 S3method(makeWrappedModel,BaggingWrapper)
 S3method(makeWrappedModel,BaseWrapper)
 S3method(makeWrappedModel,CostSensClassifWrapper)
@@ -225,6 +228,39 @@ S3method(predictLearner,surv.glmboost)
 S3method(predictLearner,surv.glmnet)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
+S3method(predictLearner,surv.rpart)
+S3method(print,Aggregation)
+S3method(print,BaggingModel)
+S3method(print,BaseWrapper)
+S3method(print,BaseWrapperModel)
+S3method(print,BenchmarkResult)
+S3method(print,ClassifTask)
+S3method(print,ClusterTask)
+S3method(print,CostSensTask)
+S3method(print,FailureModel)
+S3method(print,FeatSelControl)
+S3method(print,FeatSelResult)
+S3method(print,Filter)
+S3method(print,FilterValues)
+S3method(print,HoldoutDesc)
+S3method(print,ImputationDesc)
+S3method(print,Learner)
+S3method(print,Measure)
+S3method(print,OptModel)
+S3method(print,Prediction)
+S3method(print,RepCVDesc)
+S3method(print,ResampleDesc)
+S3method(print,ResampleInstance)
+S3method(print,ResamplePrediction)
+S3method(print,SubsampleDesc)
+S3method(print,SupervisedTask)
+S3method(print,Task)
+S3method(print,TuneControl)
+S3method(print,TuneMultiCritControl)
+S3method(print,TuneMultiCritResult)
+S3method(print,TuneResult)
+S3method(print,UnsupervisedTask)
+S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
 S3method(removeHyperPars,BaseEnsemble)
@@ -343,13 +379,12 @@ S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
+S3method(trainLearner,surv.rpart)
 export(G1)
 export(G2)
 export(acc)
 export(addProperties)
 export(analyzeFeatSelResult)
-export(as.data.frame.BenchmarkResult)
-export(as.data.frame.Prediction)
 export(asROCRPrediction)
 export(auc)
 export(b632)
@@ -504,38 +539,6 @@ export(plotTuneMultiCritResult)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
-export(print.Aggregation)
-export(print.BaggingModel)
-export(print.BaseWrapper)
-export(print.BaseWrapperModel)
-export(print.BenchmarkResult)
-export(print.ClassifTask)
-export(print.ClusterTask)
-export(print.CostSensTask)
-export(print.FailureModel)
-export(print.FeatSelControl)
-export(print.FeatSelResult)
-export(print.Filter)
-export(print.FilterValues)
-export(print.HoldoutDesc)
-export(print.ImputationDesc)
-export(print.Learner)
-export(print.Measure)
-export(print.OptModel)
-export(print.Prediction)
-export(print.RepCVDesc)
-export(print.ResampleDesc)
-export(print.ResampleInstance)
-export(print.ResamplePrediction)
-export(print.SubsampleDesc)
-export(print.SupervisedTask)
-export(print.Task)
-export(print.TuneControl)
-export(print.TuneMultiCritControl)
-export(print.TuneMultiCritResult)
-export(print.TuneResult)
-export(print.UnsupervisedTask)
-export(print.WrappedModel)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
