@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{makeFeatSelControlExhaustive}
+\name{FeatSelControl}
 \alias{FeatSelControl}
 \alias{FeatSelControlExhaustive}
 \alias{FeatSelControlGA}
@@ -12,18 +12,19 @@
 \title{Create control structures for feature selection.}
 \usage{
 makeFeatSelControlExhaustive(same.resampling.instance = TRUE,
-  maxit = NA_integer_, max.features = NA_integer_)
+  maxit = NA_integer_, max.features = NA_integer_, tune.threshold = FALSE)
 
 makeFeatSelControlGA(same.resampling.instance = TRUE, impute.val = NULL,
   maxit = NA_integer_, max.features = NA_integer_, comma = FALSE,
-  mu = 10L, lambda, crossover.rate = 0.5, mutation.rate = 0.05)
+  mu = 10L, lambda, crossover.rate = 0.5, mutation.rate = 0.05,
+  tune.threshold = FALSE)
 
 makeFeatSelControlRandom(same.resampling.instance = TRUE, maxit = 100L,
-  max.features = NA_integer_, prob = 0.5)
+  max.features = NA_integer_, prob = 0.5, tune.threshold = FALSE)
 
 makeFeatSelControlSequential(same.resampling.instance = TRUE,
   impute.val = NULL, method, alpha = 0.01, beta = -0.001,
-  maxit = NA_integer_, max.features = NA_integer_)
+  maxit = NA_integer_, max.features = NA_integer_, tune.threshold = FALSE)
 }
 \arguments{
 \item{same.resampling.instance}{[\code{logical(1)}]\cr
@@ -36,6 +37,12 @@ of function evaluations.}
 
 \item{max.features}{[\code{integer(1)}]\cr
 Maximal number of features.}
+
+\item{tune.threshold}{[\code{logical(1)}]\cr
+Should the threshold be tuned for the measure at hand, after each feature set evaluation,
+via \code{\link{tuneThreshold}}?
+Only works for classification if the predict type is \dQuote{prob}.
+Default is \code{FALSE}.}
 
 \item{impute.val}{[\code{numeric}]\cr
 If something goes wrong during optimization (e.g, the learner crashes),
@@ -86,12 +93,6 @@ Parameter of the sequential feature selection.
 Minimal required value of improvement difference for a backward / removing step.
 Negative values imply that you allow a slight decrease for the removal of a feature.
 Default is -0.001.}
-
-\item{tune.threshold}{[\code{logical(1)}]\cr
-Should the threshold be tuned for the measure at hand, after each feature set evaluation,
-via \code{\link{tuneThreshold}}?
-Only works for classification if the predict type is \dQuote{prob}.
-Default is \code{FALSE}.}
 }
 \value{
 [\code{\link{FeatSelControl}}]. The specific subclass is one of
