@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{makeTuneControlCMAES}
+\name{TuneControl}
 \alias{TuneControl}
 \alias{TuneControlCMAES}
 \alias{TuneControlGenSA}
@@ -45,7 +45,7 @@ you aggregate by mean value, or \code{Inf} instead.
 For multi-criteria optimization pass a vector of imputation values, one for each of your measures,
 in the same order as your measures.}
 
-\item{start}{[\code{numeric}]\cr
+\item{start}{[\code{list}]\cr
 Named list of initial parameter values.}
 
 \item{tune.threshold}{[\code{logical(1)}]\cr
