@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{makeTuneMultiCritControlGrid}
+\name{TuneMultiCritControl}
 \alias{TuneMultiCritControl}
 \alias{TuneMultiCritControlGrid}
 \alias{TuneMultiCritControlNSGA2}
